--- a/.github/workflows/one_time_workflow.yaml
+++ b/.github/workflows/one_time_workflow.yaml
@@ -104,67 +104,93 @@ jobs:
               return desc
           
           def extract_table_data(pdf_path):
-              """Extract data from PDF"""
+              """Extract data from PDF with duplicate prevention"""
               try:
                   reader = PdfReader(pdf_path)
                   text = "\n".join([page.extract_text() for page in reader.pages])
                   lines = text.splitlines()
                   
                   data_rows = []
+                  seen_items = set()
                   current_date = extract_date_from_text(text)
                   if not current_date:
                       current_date = extract_date_from_filename(os.path.basename(pdf_path))
                   
                   print(f"   📅 Date: {current_date}")
                   
+                  # Find table section
+                  table_started = False
+                  processed_numbers = set()
+                  
                   for i, line in enumerate(lines):
                       line = line.strip()
                       
-                      if line and len(line) > 2 and line[0].isdigit() and '.' in line[:3]:
-                          parts = line.split()
+                      if "PRODUCTS" in line.upper() and "Basic Price" in line:
+                          table_started = True
+                          continue
+                      
+                      if table_started and any(stop_word in line.upper() for stop_word in ["NOTE", "QUANTITY DISCOUNT", "FREIGHT CHARGES", "TAXES"]):
+                          break
+                      
+                      if table_started and line and len(line) > 2:
+                          import re
+                          number_match = re.match(r'^(\d+)\.\s+(.+)', line)
                           
-                          if len(parts) >= 3:
-                              try:
-                                  price_found = False
-                                  for j in range(len(parts) - 1, -1, -1):
-                                      try:
-                                          price_str = parts[j].replace(",", "").replace("Rs/", "").replace("MT", "").strip()
-                                          price = int(price_str)
-                                          
-                                          if price > 1000:
-                                              desc_parts = parts[1:j]
-                                              desc = " ".join(desc_parts)
-                                              desc = clean_description(desc)
-                                              
-                                              if len(desc) > 3 and not desc.isdigit():
-                                                  data_rows.append((current_date, desc, price))
-                                                  price_found = True
-                                                  print(f"   ✅ {desc} → ₹{price:,}")
-                                                  break
-                                      except (ValueError, IndexError):
-                                          continue
-                                  
-                                  if not price_found and i + 1 < len(lines):
-                                      next_line = lines[i + 1].strip()
-                                      next_parts = next_line.split()
-                                      
-                                      if next_parts:
+                          if number_match:
+                              item_number = number_match.group(1)
+                              rest_of_line = number_match.group(2)
+                              
+                              if item_number in processed_numbers:
+                                  continue
+                              
+                              processed_numbers.add(item_number)
+                              parts = rest_of_line.split()
+                              
+                              if len(parts) >= 2:
+                                  try:
+                                      price_found = False
+                                      for j in range(len(parts) - 1, -1, -1):
                                           try:
-                                              price_str = next_parts[0].replace(",", "").replace("Rs/", "").replace("MT", "").strip()
-                                              price = int(price_str)
-                                              if price > 1000:
-                                                  desc = " ".join(parts[1:])
-                                                  desc = clean_description(desc)
+                                              price_str = parts[j].replace(",", "").replace("Rs/", "").replace("MT", "").strip()
+                                              price_str = re.sub(r'[^\d]', '', price_str)
+                                              
+                                              if price_str:
+                                                  price = int(price_str)
                                                   
-                                                  if len(desc) > 3 and not desc.isdigit():
-                                                      data_rows.append((current_date, desc, price))
-                                                      print(f"   ✅ {desc} → ₹{price:,}")
+                                                  if price > 100000:
+                                                      desc_parts = parts[:j]
+                                                      desc = " ".join(desc_parts)
+                                                      desc = clean_description(desc)
+                                                      
+                                                      unique_key = f"{current_date}|{desc.lower()}"
+                                                      
+                                                      if len(desc) > 5 and unique_key not in seen_items:
+                                                          seen_items.add(unique_key)
+                                                          data_rows.append((current_date, desc, price))
+                                                          price_found = True
+                                                          print(f"   ✅ Item {item_number}: {desc} → ₹{price:,}")
+                                                          break
                                           except (ValueError, IndexError):
                                               continue
+                                      
+                                      if not price_found and i + 1 < len(lines):
+                                          next_line = lines[i + 1].strip()
+                                          price_match = re.match(r'^(\d{6,})', next_line.replace(",", ""))
+                                          if price_match:
+                                              price = int(price_match.group(1))
+                                              desc = " ".join(parts)
+                                              desc = clean_description(desc)
                                               
-                              except Exception:
-                                  continue
+                                              unique_key = f"{current_date}|{desc.lower()}"
+                                              if len(desc) > 5 and unique_key not in seen_items:
+                                                  seen_items.add(unique_key)
+                                                  data_rows.append((current_date, desc, price))
+                                                  print(f"   ✅ Item {item_number} (next line): {desc} → ₹{price:,}")
+                                                  
+                                  except Exception:
+                                      continue
                   
+                  print(f"   📊 Extracted {len(data_rows)} unique items")
                   return data_rows
                   
               except Exception as e:
@@ -172,20 +198,28 @@ jobs:
                   return []
           
           def create_csv_file(product_name, data_points):
-              """Create CSV file for a product"""
+              """Create CSV file for a product with duplicate removal"""
               filename = sanitize_filename(product_name) + ".csv"
               csv_path = os.path.join(CSV_DIR, filename)
               os.makedirs(CSV_DIR, exist_ok=True)
               
-              data_points.sort(key=lambda x: x[0])
+              # Remove duplicates based on date and price
+              unique_data = {}
+              for date, desc, price in data_points:
+                  key = f"{date}|{price}"
+                  if key not in unique_data:
+                      unique_data[key] = (date, desc, price)
+              
+              final_data = list(unique_data.values())
+              final_data.sort(key=lambda x: x[0])
               
               with open(csv_path, "w", newline="") as f:
                   writer = csv.writer(f)
                   writer.writerow(["Date", "Product", "Price"])
-                  for date, desc, price in data_points:
+                  for date, desc, price in final_data:
                       writer.writerow([date, desc, price])
               
-              print(f"   💾 Created: {filename} ({len(data_points)} records)")
+              print(f"   💾 Created: {filename} ({len(final_data)} records)")
           
           # Main execution
           print("🚀 Starting bulk extraction...")
