--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '30 10 * * *'  # Runs every day at 4:00 PM IST (10:30 AM UTC)
+    - cron: '0 16 * * *'   # Runs every day at 9:30 PM IST (16:00 UTC)
 
 permissions:
   contents: write
