--- a/.github/workflows/update_csv.yml
+++ b/.github/workflows/update_csv.yml
@@ -3,7 +3,8 @@ name: Daily Hindalco CSV Update
 on:
   workflow_dispatch:  # Manual trigger
   schedule:
-      - cron: '0 11 * * *'  # Run at 4:30 PM IST daily
+      - cron: '15 11 * * *'  # Run at 4:30 PM IST daily
+      - cron: '15 16 * * *'   # Runs every day at 9:30 PM IST (16:00 UTC)
 
 permissions:
   contents: write
@@ -70,3 +71,4 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
